--- a/template/studio/package.json
+++ b/template/studio/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "sanity-gatsby-portfolio-studio",
-  "version": "1.0.6",
+  "name": "vs-sanity-gatsby-starter-studio",
+  "version": "1.0.0",
   "main": "package.json",
-  "author": "Sanity <hello@sanity.io>",
+  "author": "Brent Robbins <brent@variantstudios.com>",
   "scripts": {
     "dev": "sanity start",
     "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
@@ -13,21 +13,21 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.1.3",
-    "@sanity/cli": "^2.1.0",
-    "@sanity/components": "^2.1.0",
-    "@sanity/core": "^2.1.2",
-    "@sanity/dashboard": "^2.1.0",
-    "@sanity/default-layout": "^2.1.3",
-    "@sanity/default-login": "^2.1.0",
-    "@sanity/desk-tool": "^2.1.3",
-    "date-fns": "^1.30.1",
+    "@sanity/base": "^2.21.6",
+    "@sanity/cli": "^2.21.6",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.21.6",
+    "@sanity/dashboard": "^2.21.6",
+    "@sanity/default-layout": "^2.21.6",
+    "@sanity/default-login": "^2.21.6",
+    "@sanity/desk-tool": "^2.21.6",
+    "date-fns": "^2.25.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^3.11.0",
-    "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
-    "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
+    "react-icons": "^4.3.1",
+    "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
+    "sanity-plugin-dashboard-widget-netlify": "^1.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
